# HNSVSA-HA

./: .gitignore  LICENSE  README.md  ds_config.json  finetune.py  pretokenize_dataset.py  pyproject.toml  requirements.txt  train.py  training_config.py
arnl/: __init__.py  config.py  decay_engine.py  injection_bridge.py  model.py  reasoning_head.py  salt_tokenizer.py  system1.py  system2.py  training.py  utils.py
docs/: ARNL_V1.1_Specification.md  ARNL_V1_Specification.md  arnold_spec.md
examples/: demo.py
inference/: chat.py  chat_server.py
inference/static/: chat.css  chat.html  chat.js
nsvsa_ha/: __init__.py  cache.py  ffn.py  hybrid_layer.py  hybrid_model.py  local_attention.py  modes.py  reasoning.py  rmsnorm.py  rope.py  soft_vsa.py  tokenizer.py
scripts/: __init__.py  chat.py  data_config.py  populate_map.py  train.py  train_tokenizer.py
tests/: test_deepspeed.py  test_hybrid.py
training/: pretokenize_dataset.py  train.py  train_tokenizer.py  training_config.py
