[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nsvsa-ha"
version = "0.1.0"
description = "Neuro-Symbolic VSA with Hierarchical Attention"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "datasets>=2.20.0",
    "tiktoken>=0.7.0",
    "tokenizers>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nsvsa_ha*"]
